--- a/package.json
+++ b/package.json
@@ -1,30 +1,25 @@
 {
-  "name": "mvc-challenge",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+  "dataStreamName": "MyDataSource",
+  "type": "derived",
+  "application": {
+    "detailsUrl": "http://example.com",
+    "name": "Foo Example App",
+    "version": "1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/a7063p/week-14-challenge.git"
+  "dataType": {
+    "field": [
+      {
+        "name": "steps",
+        "format": "integer"
+      }
+    ],
+    "name": "com.google.step_count.delta"
   },
-  "author": "Pennucci",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/a7063p/week-14-challenge/issues"
-  },
-  "homepage": "https://github.com/a7063p/week-14-challenge#readme",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "connect-session-sequelize": "^7.1.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.1",
-    "express-session": "^1.17.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.5.1"
+  "device": {
+    "manufacturer": "Example Manufacturer",
+    "model": "ExampleTablet",
+    "type": "tablet",
+    "uid": "1000001",
+    "version": "1"
   }
 }
