updata json package

--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "dataStreamName": "MyDataSource",
-  "type": "derived",
-  "application": {
-    "detailsUrl": "http://example.com",
-    "name": "Foo Example App",
-    "version": "1"
+  "name": "fitnessflow",
+  "version": "1.0.0",
+  "description": "![license](https://img.shields.io/badge/license-MIT-critical?./license/MIT)",
+  "main": "Recording.js",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.1",
+    "express-session": "^1.17.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.2",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2"
   },
-  "dataType": {
-    "field": [
-      {
-        "name": "steps",
-        "format": "integer"
-      }
-    ],
-    "name": "com.google.step_count.delta"
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "device": {
-    "manufacturer": "Example Manufacturer",
-    "model": "ExampleTablet",
-    "type": "tablet",
-    "uid": "1000001",
-    "version": "1"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jidlebir/FitnessFlow.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jidlebir/FitnessFlow/issues"
+  },
+  "homepage": "https://github.com/jidlebir/FitnessFlow#readme"
 }
