--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
+    "foundation": "^4.2.1-1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.1"
   }
